WebCore:

2009-05-07  John Grabowski  <jrg@chromium.org>

        Reviewed by Simon Fraser.

        https://bugs.webkit.org/show_bug.cgi?id=25573
        Unify use of CG-common routine for drawLineForMisspellingOrBadGrammar.
        Cleanup for WebKit, but required for Chromium happiness.

        * platform/graphics/cg/GraphicsContextCG.cpp:
        (WebCore::spellingPatternColor):
        (WebCore::grammarPatternColor):
        (WebCore::GraphicsContext::drawLineForMisspellingOrBadGrammar):
        * platform/graphics/mac/GraphicsContextMac.mm:
        * platform/graphics/win/GraphicsContextCGWin.cpp:

LayoutTests:

2009-05-07  John Grabowski  <jrg@chromium.org>

        Reviewed by Simon Fraser.

        https://bugs.webkit.org/show_bug.cgi?id=25573
        Rebaseline of spelling tests for Mac.  Tests pass even without this
        change but checksums don't match.  Non-Mac does not need a new baseline.

        * platform/mac/editing/spelling/inline_spelling_markers-expected.checksum:
        * platform/mac/editing/spelling/inline_spelling_markers-expected.png:
        * platform/mac/editing/spelling/spellcheck-attribute-expected.checksum:
        * platform/mac/editing/spelling/spellcheck-attribute-expected.png:
        * platform/mac/editing/spelling/spelling-expected.checksum:
        * platform/mac/editing/spelling/spelling-expected.png:
        * platform/mac/editing/spelling/spelling-linebreak-expected.checksum:
        * platform/mac/editing/spelling/spelling-linebreak-expected.png:

Canonical link: https://commits.webkit.org/35408@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43385 268f45cc-cd09-0410-ab3c-d52691b4dbfc